--- a/PubnubChat.uplugin
+++ b/PubnubChat.uplugin
@@ -1,14 +1,14 @@
 {
 	"FileVersion": 3,
-	"Version": 3,
-	"VersionName": "0.1.2",
+	"Version": 4,
+	"VersionName": "0.1.3",
 	"FriendlyName": "Pubnub Chat SDK",
 	"Description": "Quickly and easily integrate a real-time text chat solution that is reliable, flexible, and scalable.",
 	"Category": "Code",
 	"CreatedBy": "PubNub Inc.",
 	"CreatedByURL": "https://www.pubnub.com/",
 	"DocsURL": "https://www.pubnub.com/docs/chat/unreal-chat-sdk/overview",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/6c1cddf71c29441aaf2e80af29626829",
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
