Add propper chat dll hadling. Fix crashes.

--- a/PubnubChat.uplugin
+++ b/PubnubChat.uplugin
@@ -22,7 +22,7 @@
 		{
 			"Name": "PubnubChatSDK",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "PostEngineInit",
 			"PlatformAllowList": [
 				"Win64",
 				"Mac"
