Add correct FabURL to .uplugin file.

--- a/PubnubChat.uplugin
+++ b/PubnubChat.uplugin
@@ -1,14 +1,14 @@
 {
 	"FileVersion": 3,
-	"Version": 6,
-	"VersionName": "0.2.0",
+	"Version": 7,
+	"VersionName": "0.2.1",
 	"FriendlyName": "Pubnub Chat SDK",
 	"Description": "Quickly and easily integrate a real-time text chat solution that is reliable, flexible, and scalable.",
 	"Category": "Code",
 	"CreatedBy": "PubNub Inc.",
 	"CreatedByURL": "https://www.pubnub.com/",
 	"DocsURL": "https://www.pubnub.com/docs/chat/unreal-chat-sdk/overview",
-	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/6c1cddf71c29441aaf2e80af29626829",
+	"FabURL": "com.epicgames.launcher://ue/Fab/product/0188cdfe-6231-4691-8c8f-32d01abc27e7",
 	"SupportURL": "",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
