--- a/.pubnub.yml
+++ b/.pubnub.yml
@@ -1,8 +1,13 @@
 name: unreal-engine-chat
-version: v0.4.1
+version: v0.4.2
 schema: 1
 scm: github.com/pubnub/unreal-engine-chat
 changelog:
+  - date: 2025-06-16
+    version: v0.4.2
+    changes:
+      - type: improvement
+        text: "Add support for UE 5.6."
   - date: 2025-06-02
     version: v0.4.1
     changes:
